simple dark mode

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <body>
     <h1>Ved Kothavade</h1>
     <i>
-      I'm a student from NJ, studying Computer Science at the <a href="https://umd.edu" target="_blank">University of Maryland, College Park</a>.
-      I've interned at <a href="https://bloomberg.com/company" target="_blank">Bloomberg L.P.</a> 
-      and <a href="https://bgcg.com" target="_blank">BGC Group</a>.
+      I'm a student from New Jersey, studying Computer Science at the 
+      <a href="https://umd.edu" target="_blank">University of Maryland, College Park</a>.
     </i>
     <div class="social-container">
       <a class="social-link" href="https://github.com/kothavade/" target="_blank">GitHub</a> 
